style: styling related changes

--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 <body>
     <main>
         <h2>Stock Profit & Loss Calculator</h2>
+        <form class="card">
         <label for="initial-price">
-            Initial Price: <input type="number"  id="initial-price"/>
+            Initial Price: <input  class="price" type="number"  id="initial-price"/>
         </label>
 
         <label for="quantityofStocks">
             Quantity Bought: <input type="number"  id="quantityofStocks"/>
         </label>
         <label for="current-price">
-            Current Price: <input type="number"  id="current-price"/>
+            Current Price: <input  class="price"type="number"  id="current-price"/>
         </label>
 
         <button type="button" id="checkProfitLoss">Check</button>
+        </form>
         <div id="output">
 
         </div>
